fixed z-index issue

--- a/frontend/css/core/main.css
+++ b/frontend/css/core/main.css
@@ -46,17 +46,6 @@ table {
 	padding-left: 40px
 }
 
-/*.addPanel-container {
-	display: none;
-	width: 25%;
-	position: absolute;
-	top: 50;
-	right: 10;
-	z-index: 1001;
-	height: 700px;
-	overflow: scroll;
-}*/
-
 html {
 	background-image: url('/img/retina_wood_@2X.png');
 }
@@ -120,17 +109,30 @@ input[type=text] {
 	position: fixed;
 	color: #E6E6E6;
 	background: #222222;
-	z-index: 1000;
+	z-index: 12;
 }
 
-.eventDetailEdit-container, .addPanel-container {
+#detailEdit_container{
+	z-index: 11;
+}
+
+.addPanel-container{
+	z-index: 10;
+}
+
+#calendar{
+	z-index: 1;
+}
+
+#detailEdit_container, .addPanel-container {
+	display: none;
 	width: 300px;
 	height: 100%;
 	top: 0;
 	position: fixed;
 	right: -300px;
 	background: #fff;
-	/*z-index: 1000;*/
+	overflow: scroll;
 }
 
 nav h1 {
@@ -344,11 +346,6 @@ header h1 {
 	margin-bottom: 10px;
 	display: block;
 	width: 100%;
-}
-
-.eventEdit-container {
-	z-index: 10000;
-	background: white;
 }
 
 /*
